--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ document.getElementById('messageForm').addEventListener('submit', async function
     
     try {
         // Send data to Flask backend
-        const response = await fetch('http://127.0.0.1:5000/send-message', {
+        const response = await fetch('https://saikiran-portfolio-1-1.onrender.com/send-message', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
